fix for button text alignment

--- a/my-electron-app/src/main_window/style.css
+++ b/my-electron-app/src/main_window/style.css
@@ -28,12 +28,17 @@ body
 }
 
 .menu-button {
+    
+
     width: 100%;
     height: 63px;
 
     background-color: var(--light-menu-background);
     border: 0px;
     border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+
+    transition-duration: 0.3s;
 }
 
 .menu-button:hover {
@@ -44,8 +49,6 @@ body
 
 .menu-button:active {
     background-color: var(--dark-menu-background);
-
-    border-left: 5px solid var(--button-hover-border);
 }
 
 .menu-button:focus {
