--- a/my-electron-app/src/theme.css
+++ b/my-electron-app/src/theme.css
@@ -5,7 +5,7 @@
     --dark-menu-background: rgb(134, 134, 134);
     --light-menu-background: rgb(197, 197, 197);
     --light-border: azure;
-    --code-font: "Lucida Console", Courier, monospace;
+    --code-font: "Lucida Console", "Courier New", monospace;
 
     --button-hover-border: rgb(83, 180, 209);
 }
